fix: remove dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,13 +7,6 @@
   --background-rgb: 240, 240, 240;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 0, 0, 0;
-  }
-}
-
 body {
   width: 100%;
   height: 100vh;
